--- a/recovery/root/init.recovery.mt6765.rc
+++ b/recovery/root/init.recovery.mt6765.rc
@@ -1,78 +1,38 @@
+import /init.recovery.trustonic.rc
+
 on fs
     install_keyring
-    mkdir /mnt/vendor/persist 0777 system system
-    mkdir /data/vendor/mcRegistry 0777 system system
+    export LD_LIBRARY_PATH /system/lib64:/vendor/lib64:/vendor/lib64/hw
     setprop crypto.ready 1
     write /sys/class/power_supply/usb/otg_switch 1
-    start hwservicemanager
-    start servicemanager
 
-service hwservicemanager /sbin/hwservicemanager
-    user root
-    group root readproc
-    disabled
-    onrestart setprop hwservicemanager.ready false
-    seclabel u:r:recovery:s0
-
-service servicemanager /sbin/servicemanager
-    user root
-    group root readproc
-    disabled
-    seclabel u:r:recovery:s0
-
-service keystore_auth /sbin/keystore_auth
+service keystore_auth /system/bin/keystore_auth
     oneshot
     user system
     group root
     disabled
     seclabel u:r:recovery:s0
 
-service keystore /sbin/keystore /tmp/misc/keystore
+service keystore /system/bin/keystore /tmp/misc/keystore
     user root
     group root drmrpc readproc
     disabled
     seclabel u:r:recovery:s0
 
-#service mobicore /sbin/mcDriverDaemon --P1 /mnt/vendor/persist/mcRegistry \
-#	-r /vendor/app/mcRegistry/06090000000000000000000000000000.drbin \
-#	-r /vendor/app/mcRegistry/020f0000000000000000000000000000.drbin \
-#	-r /vendor/app/mcRegistry/05120000000000000000000000000000.drbin \
-#	-r /vendor/app/mcRegistry/020b0000000000000000000000000000.drbin \
-#	-r /vendor/app/mcRegistry/05070000000000000000000000000000.drbin \
-#	-r /vendor/app/mcRegistry/030b0000000000000000000000000000.drbin \
-#	-r /vendor/app/mcRegistry/03100000000000000000000000000000.drbin \
-#	-r /vendor/app/mcRegistry/030c0000000000000000000000000000.drbin \
-#	-r /vendor/app/mcRegistry/40188311faf343488db888ad39496f9a.drbin \
-#	-r /vendor/app/mcRegistry/070c0000000000000000000000000000.drbin \
-#	-r /vendor/app/mcRegistry/090b0000000000000000000000000000.drbin \
-#	-r /vendor/app/mcRegistry/0f5eed3c3b5a47afacca69a84bf0efad.drbin \
-#	-r /vendor/app/mcRegistry/07060000000000000000000000007169.drbin \
-#	-r /vendor/app/mcRegistry/07407000000000000000000000000000.drbin \
-#	-r /vendor/app/mcRegistry/9073f03a9618383bb1856eb3f990babd.drbin \
-#	-r /vendor/app/mcRegistry/05060000000000000000000000000000.drbin \
-#	-r /vendor/app/mcRegistry/05070000000000000000000000000000.drbin \
-#	-r /vendor/app/mcRegistry/030f0000000000000000000000000000.drbin \
-#	-r /vendor/app/mcRegistry/09070000000000000000000000000000.drbin
-service mobicore /sbin/mcDriverDaemon
-    user root
-    group root
-    disabled
-    seclabel u:r:recovery:s0
-
 #Add for OPPO FBE
-service hal_cryptoeng_oppo /sbin/vendor.oppo.hardware.cryptoeng@1.0-service
+service hal_cryptoeng_oppo /system/bin/vendor.oppo.hardware.cryptoeng@1.0-service
     user root
     group root drmrpc sdcard_rw sdcard_r
     disabled
     seclabel u:r:recovery:s0
 
-service keymaster-3-0 /sbin/android.hardware.keymaster@3.0-service.trustonic
+service keymaster-3-0 /system/bin/android.hardware.keymaster@3.0-service.trustonic
     user root
     group root drmrpc
     disabled
     seclabel u:r:recovery:s0
 
-service gatekeeper-1-0 /sbin/android.hardware.gatekeeper@1.0-service
+service gatekeeper-1-0 /system/bin/android.hardware.gatekeeper@1.0-service
     user root
     group root
     disabled
@@ -80,31 +40,29 @@ service gatekeeper-1-0 /sbin/android.hardware.gatekeeper@1.0-service
 
 on property:hwservicemanager.ready=true
     start hal_cryptoeng_oppo
-    start mobicore
     start keymaster-3-0
     start gatekeeper-1-0
 
 on property:ro.crypto.state=unsupported
-    stop hal_cryptoeng_oppo
     stop mobicore
-    stop servicemanager
-    stop hwservicemanager
+    stop hal_cryptoeng_oppo
     stop keymaster-3-0
     stop gatekeeper-1-0
+    stop servicemanager
+    stop hwservicemanager
 
 on property:ro.crypto.state=unencrypted
-    stop hal_cryptoeng_oppo
     stop mobicore
-    stop servicemanager
-    stop hwservicemanager
+    stop hal_cryptoeng_oppo
     stop keymaster-3-0
     stop gatekeeper-1-0
-
-on property:twrp.decrypt.done=true
-    stop hal_cryptoeng_oppo
-    stop mobicore
     stop servicemanager
     stop hwservicemanager
+
+on property:twrp.decrypt.done=true && property:twrp.all.users.decrypted=true
+    stop mobicore
+    stop hal_cryptoeng_oppo
     stop keymaster-3-0
     stop gatekeeper-1-0
-
+    stop servicemanager
+    stop hwservicemanager
